# clip

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: main.cpp
